VIITE-3259 Fix hidden summary table, refactoring and UI update (#1837)
* VIITE-3259 Fix hidden summary table, refactoring and UI update

* VIITE-3259 fix project summary table flaws

* VIITE-3259 fix too high table frame

* VIITE-3259 update manual

* VIITE-3259 fix table not centering and resizing properly on open

* VIITE-3259 improved responsiveness, scrollbar and resize

* VIITE-3259 fix table resize

* VIITE-3534 Access local storage safely

--- a/viite-UI/src/less/site/global.less
+++ b/viite-UI/src/less/site/global.less
@@ -187,3 +187,27 @@ img.calibration-point {
 .project-item {
   border-bottom: 1px solid darkgray;
 }
+
+// Scrollbars
+::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f0f0f0;
+  border-radius: 3px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #1c7fdd;
+  border-radius: 3px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #0f6ac4;
+}
+
+::-webkit-scrollbar-button {
+  display: none;
+}
